--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  
     <body>
       <h1>KOREY HENNINGER</h1>
-      <p>What it do, skins???</p>
+      <p><strong>What it do, skins???</strong></p>
       <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
     </body>
  
